add select2 form

--- a/school-game-front/src/index.html
+++ b/school-game-front/src/index.html
@@ -31,9 +31,17 @@
   <!-- Icons -->
   <link href="./assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
   <link href="./assets/vendor/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
+
+  <link rel="stylesheet" href="assets/vendor/select2/dist/css/select2.min.css">
+
+  <script src="https://argon-dashboard-pro-nodejs.creative-tim.com/vendor/jquery/dist/jquery.min.js"></script>
+
+
+  <script src="assets/vendor/select2/dist/js/select2.min.js"></script>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY_HERE"></script>
+<!--  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY_HERE"></script>-->
 
 </head>
 <body>
